fixed spacing in group modal

--- a/web2/src/pages/Settings/Groups/GroupModal/GroupModal.scss
+++ b/web2/src/pages/Settings/Groups/GroupModal/GroupModal.scss
@@ -6,7 +6,6 @@
 }
 
 .group-name-input {
-  width: 100%;
   margin-left: 1rem;
   margin-bottom: 0.5rem;
 }
